--- a/public/members.html
+++ b/public/members.html
@@ -76,6 +76,7 @@
     <div class="container animated fadeIn delay-1s">
       <div class="card has-text-centered middle-card">
         <h1 class="heading">itineraries</h1>
+        <br />
         <div class="itinerary-cards">
           <!-- itinerary card input -->
 
@@ -98,7 +99,7 @@
                 clutch my guy.
               </p>
               <div id="addReview">
-                <!-- NEW REVIEW POSTED HERE -->
+                <!-- *****NEW REVIEW POSTED HERE**** -->
               </div>
               <br />
               <div class="field">
@@ -107,20 +108,21 @@
                 >
                 <div class="control">
                   <!--Itin Review Textarea-->
-                  <textarea
-                    id="las-vegas"
-                    class="textarea"
-                    placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
-                  ></textarea>
-                  <button id="postReview" class="button is-info is-light">
-                    Post My Review
-                  </button>
+                  <form id="itinRevInput">
+                    <textarea
+                      id="las-vegas"
+                      class="textarea"
+                      placeholder="What did you enjoy or not enjoy this trip? Any suggestions for other travelers?"
+                    ></textarea>
+                    <button id="postReview" class="button is-info is-light">
+                      Post My Review
+                    </button>
+                  </form>
                 </div>
               </div>
             </article>
           </div>
           <!-- end cards -->
-          <!-- NEW ROW -->
         </div>
       </div>
     </div>
