Itinerary posting to Database.

--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -161,7 +161,7 @@
           <!-- input form -->
           <br />
           <!-- *******FORM ID******* -->
-          <form id="createItin">
+         <form id="createItin" data-id="itinIndex" method="POST">
             <label class="label">When is your trip?</label>
             <div class="field has-addons has-text-centered">
               <div class="field is-horizontal">
