--- a/nodemailerDemoForm.html
+++ b/nodemailerDemoForm.html
@@ -1,56 +1,108 @@
 CONTACT
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Acme Web Design</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1 class="brand"><span>Acme</span> Web Design</h1>
-    <div class="wrapper animated bounceInLeft">
-      <div class="company-info">
-        <h3>Acme Web Design</h3>
-        <ul>
-          <li><i class="fa fa-road"></i> 44 Something st</li>
-          <li><i class="fa fa-phone"></i> (555) 555-5555</li>
-          <li><i class="fa fa-envelope"></i> test@acme.test</li>
-        </ul>
-      </div>
-      <div class="contact">
-        <h3>Email Us</h3>
-        <form>
+<html lang="en" style="background-image: none;">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Your Itinerary</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    />
+    <link href="stylesheets/style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Saira&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css"
+    />
+    <link rel="stylesheet" href="public/stylesheets/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="tile is-parent">
+        <article class="tile is-child box">
+          <p class="title" style="font-size: 25px; letter-spacing: 5px;">
+            Your Itinerary For Your Trip To:
+          </p>
+          <p class="title" style="font-size: 25px; letter-spacing: 5px;">
+            <i class="fas fa-map-marker-alt"></i>
+            <!-- **** GRAB CITY FROM ITINERARY FORM *** -->
+            CITY
+          </p>
+          <!-- **** GRAB START DATE AND END DATE **** -->
+          <p class="subtitle">
+            <span class="start-date">START DATE</span>-<span class="end-date"
+              >END DATE</span
+            >
+          </p>
+          <p class="card-subhead">Food:</p>
+          <!--  **** GRAB FOOD FROM FORM **** -->
+          <p class="card-subhead">Activites:</p>
+          <!-- GRAB ACTIVITIES FROM FORM -->
+          <p class="card-subhead">Nightlife:</p>
+          <!-- GRAB NIGHT LIFE FROM FORM -->
+          <p class="card-subhead">Reviews:</p>
           <p>
-            <label>Name</label>
-            <input type="text" name="name">
+            <!-- IF WE WANT GRAB REVIEWS IF NOT LEAVE OFF OF NODEMAILER -->
           </p>
-          <p>
-            <label>Company</label>
-            <input type="text" name="company">
-          </p>
-          <p>
-            <label>Email Address</label>
-            <input type="email" name="email">
-          </p>
-          <p>
-            <label>Phone Number</label>
-            <input type="text" name="phone">
-          </p>
-          <p class="full">
-            <label>Message</label>
-            <textarea name="message" rows="5"></textarea>
-          </p>
-          <p class="full">
-            <button>Submit</button>
-          </p>
-        </form>
+          <br />
+        </article>
       </div>
     </div>
-  </div>
-</body>
+
+    <div class="container">
+      <h1 class="brand"><span>Acme</span> Web Design</h1>
+      <div class="wrapper animated bounceInLeft">
+        <div class="company-info">
+          <h3>Acme Web Design</h3>
+          <ul>
+            <li><i class="fa fa-road"></i> 44 Something st</li>
+            <li><i class="fa fa-phone"></i> (555) 555-5555</li>
+            <li><i class="fa fa-envelope"></i> test@acme.test</li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h3>Email Us</h3>
+          <form>
+            <p>
+              <label>Name</label>
+              <input type="text" name="name" />
+            </p>
+            <p>
+              <label>Company</label>
+              <input type="text" name="company" />
+            </p>
+            <p>
+              <label>Email Address</label>
+              <input type="email" name="email" />
+            </p>
+            <p>
+              <label>Phone Number</label>
+              <input type="text" name="phone" />
+            </p>
+            <p class="full">
+              <label>Message</label>
+              <textarea name="message" rows="5"></textarea>
+            </p>
+            <p class="full">
+              <button>Submit</button>
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
