--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -49,7 +49,7 @@
 
     <div class="container animated fadeIn delay-1s">
       <!-- Bulma Calendar is "input type="date" -->
-      <input type="date" />
+      <!-- <input type="date" /> -->
       <div class="card has-text-centered is-wide main-center-card">
         Enter your travel information below to search for events during your
         trip, and begin creating your itinerary!
@@ -303,7 +303,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/itinerary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="bulmaCalendar.js"></script>
-    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
+    <!-- <script src="bulmaCalendar.js"></script>
+    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script> -->
   </body>
 </html>
