append ajax calls from db onto members page from the itineraries input (#43)
* added form id for submit

* added a few cards to itinerary page

* added to seed file, updated members page with styling for api call

* added card for nodemailer

* added functionality for cards to append to members page from database

--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -24,10 +24,6 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-    <link
-      href="~bulma-calendar/dist/css/bulma-calendar.min.css"
-      rel="stylesheet"
-    />
     <title>Trip Tips</title>
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
   </head>
@@ -49,7 +45,7 @@
 
     <div class="container animated fadeIn delay-1s">
       <!-- Bulma Calendar is "input type="date" -->
-      <input type="date" />
+      <!-- <input type="date" /> -->
       <div class="card has-text-centered is-wide main-center-card">
         Enter your travel information below to search for events during your
         trip, and begin creating your itinerary!
@@ -161,7 +157,7 @@
           <!-- input form -->
           <br />
           <!-- *******FORM ID******* -->
-         <form id="createItin" data-id="itinIndex" method="POST">
+          <form id="createItin" data-id="itinIndex" method="POST">
             <label class="label">When is your trip?</label>
             <div class="field has-addons has-text-centered">
               <div class="field is-horizontal">
@@ -303,7 +299,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/itinerary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="bulmaCalendar.js"></script>
-    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
+    <!-- <script src="bulmaCalendar.js"></script>
+    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script> -->
   </body>
 </html>
