fixed signout bug.

--- a/public/members.html
+++ b/public/members.html
@@ -59,7 +59,7 @@
                 Create Your Own
               </button></a
             >
-            <a id="signOut" href="/login"
+            <a id="signOut" href="/logout"
               ><button
                 class="button is-info is-light"
                 style="margin-left: 50px;"
