--- a/public/signup.html
+++ b/public/signup.html
@@ -92,12 +92,12 @@
                 ></span>
                 <span class="sr-only">Error:</span> <span class="msg"></span>
               </div>
-              <p>Or log in <a href="/">here</a></p>
+              <p>Or log in <a href="/login">here</a></p>
             </form>
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/signup.js"></script>
